--- a/LearnIoc.CastleWindsor.ClassLibrary/LearnIoc.CastleWindsor.ClassLibrary.csproj
+++ b/LearnIoc.CastleWindsor.ClassLibrary/LearnIoc.CastleWindsor.ClassLibrary.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8547536B-C409-41B5-BCB2-49D3FE5245B9}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{828E712A-9CED-47E2-AFD1-0DCAE3E7D38E}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LearnLoc.Autofac</RootNamespace>
-    <AssemblyName>LearnLoc.Autofac</AssemblyName>
+    <RootNamespace>LearnLoc.CastleWindsor.ClassLibrary</RootNamespace>
+    <AssemblyName>LearnLoc.CastleWindsor.ClassLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,11 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DependencyOne.cs" />
+    <Compile Include="DependencyTwo.cs" />
+    <Compile Include="IDependencyOne.cs" />
+    <Compile Include="IDependencyTwo.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
