学习了castle windsor的基本用法

--- a/LearnIoc.CastleWindsor.WindowsForm/LearnIoc.CastleWindsor.WindowsForm.csproj
+++ b/LearnIoc.CastleWindsor.WindowsForm/LearnIoc.CastleWindsor.WindowsForm.csproj
@@ -62,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -84,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LearnIoc.CastleWindsor.ClassLibrary\LearnIoc.CastleWindsor.ClassLibrary.csproj">
+      <Project>{828e712a-9ced-47e2-afd1-0dcae3e7d38e}</Project>
+      <Name>LearnIoc.CastleWindsor.ClassLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
