--- a/LearnIoc.CastleWindsor.MVC2013/LearnIoc.CastleWindsor.MVC2013.csproj
+++ b/LearnIoc.CastleWindsor.MVC2013/LearnIoc.CastleWindsor.MVC2013.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Installers\ControllersInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pulmbing\WindsorControllerFactory.cs" />
   </ItemGroup>
