--- a/LearnIoc.CastleWindsor.MVC2013/LearnIoc.CastleWindsor.MVC2013.csproj
+++ b/LearnIoc.CastleWindsor.MVC2013/LearnIoc.CastleWindsor.MVC2013.csproj
@@ -105,7 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestIcoController.cs" />
+    <Compile Include="Controllers\TwoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -132,6 +134,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Two\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
