学习了autofac的基本使用

--- a/LearnIoc.Autofac/LearnIoc.Autofac.csproj
+++ b/LearnIoc.Autofac/LearnIoc.Autofac.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="implementation\ConsoleOutput.cs" />
+    <Compile Include="implementation\TodayWriter.cs" />
+    <Compile Include="Interfaces\IDateWriter.cs" />
+    <Compile Include="Interfaces\IOutput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
