添加了Autofac.MVC的项目,测试每个请求注册一个实例

--- a/LearnIoc.Autofac/LearnIoc.Autofac.csproj
+++ b/LearnIoc.Autofac/LearnIoc.Autofac.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="implementation\ConsoleOutput.cs" />
+    <Compile Include="implementation\TestSon.cs" />
     <Compile Include="implementation\TodayWriter.cs" />
     <Compile Include="Interfaces\IDateWriter.cs" />
     <Compile Include="Interfaces\IOutput.cs" />
