--- a/LearnIoc.Autofac.MVC/LearnIoc.Autofac.MVC.csproj
+++ b/LearnIoc.Autofac.MVC/LearnIoc.Autofac.MVC.csproj
@@ -154,6 +154,10 @@
     </Compile>
     <Compile Include="Models\TestPerRequestLifetime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Implementation\TestOneRepository.cs" />
+    <Compile Include="Repository\Implementation\TestTwoRepository.cs" />
+    <Compile Include="Repository\Interfaces\ITestOneRepository.cs" />
+    <Compile Include="Repository\Interfaces\ITestTwoRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
