--- a/LearnIoc.Autofac.MVC/LearnIoc.Autofac.MVC.csproj
+++ b/LearnIoc.Autofac.MVC/LearnIoc.Autofac.MVC.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\DBContextFactory.cs" />
     <Compile Include="Models\TestPerRequestLifetime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Implementation\TestOneRepository.cs" />
